Ændret stat fil

--- a/notebooks/ÆgtestatLucca.ipynb
+++ b/notebooks/ÆgtestatLucca.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b9cce6e4",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Find alle CSV-filer i mappen\n",
-    "curve_paths = glob.glob(\"PC roteret/*.csv\")\n",
+    "curve_paths = glob.glob(\"data/PC roteret/*.csv\")\n",
     "\n",
     "# Indlæs alle kurver\n",
     "aligned_curves = [np.loadtxt(path, delimiter=\",\") for path in curve_paths]\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2bc0eb91",
    "metadata": {},
    "outputs": [
@@ -53,40 +53,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pipe 01 – Curve 4         → Length: 249.57 mm\n",
-      "Pipe 01 – Curve 5         → Length: 253.51 mm\n",
-      "Pipe 02 – Curve 3         → Length: 226.69 mm\n",
-      "Pipe 02 – Curve 4         → Length: 296.75 mm\n",
-      "Pipe 03 – Curve 1         → Length: 211.98 mm\n",
-      "Pipe 03 – Curve 4         → Length: 175.71 mm\n",
-      "Pipe 04 – Curve 1         → Length: 583.02 mm\n",
-      "Pipe 04 – Curve 2         → Length: 385.41 mm\n",
-      "Pipe 05 – Curve 3         → Length: 222.99 mm\n",
-      "Pipe 05 – Curve 4         → Length: 212.66 mm\n",
-      "Pipe 05 – Curve 5         → Length: 253.18 mm\n",
-      "Pipe 06 – Curve 2         → Length: 261.29 mm\n",
-      "Pipe 06 – Curve 4         → Length: 261.16 mm\n",
-      "Pipe 06 – Curve 5         → Length: 232.53 mm\n",
-      "Pipe 07 – Curve 1         → Length: 246.99 mm\n",
-      "Pipe 07 – Curve 2         → Length: 259.30 mm\n",
-      "Pipe 07 – Curve 3         → Length: 282.04 mm\n",
-      "Pipe 07 – Curve 4         → Length: 231.21 mm\n",
-      "Pipe 08 – Curve 1         → Length: 215.46 mm\n",
-      "Pipe 08 – Curve 3         → Length: 279.47 mm\n",
-      "Pipe 08 – Curve 4         → Length: 282.62 mm\n",
-      "Pipe 08 – Curve 5         → Length: 244.41 mm\n",
-      "Pipe 09 – Curve 2         → Length: 285.66 mm\n",
-      "Pipe 09 – Curve 4         → Length: 238.30 mm\n",
-      "Pipe 10 – Curve 1         → Length: 210.34 mm\n",
-      "Pipe 10 – Curve 2         → Length: 265.04 mm\n",
-      "Pipe 10 – Curve 3         → Length: 312.07 mm\n",
-      "Pipe 10 – Curve 4         → Length: 229.11 mm\n",
       "\n",
-      "📏 Statistik over kurve-længder:\n",
-      "Min:         175.71\n",
-      "Maks:        583.02\n",
-      "Gennemsnit:  264.59\n",
-      "Std. afvig:  72.66\n"
+      "📏 Statistik over kurve-længder:\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "zero-size array to reduction operation minimum which has no identity",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m lengths \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(lengths)\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m📏 Statistik over kurve-længder:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMin:         \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mlengths\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmin\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMaks:        \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlengths\u001b[38;5;241m.\u001b[39mmax()\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGennemsnit:  \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlengths\u001b[38;5;241m.\u001b[39mmean()\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\lucca\\anaconda3\\envs\\fagprojekt\\Lib\\site-packages\\numpy\\core\\_methods.py:45\u001b[0m, in \u001b[0;36m_amin\u001b[1;34m(a, axis, out, keepdims, initial, where)\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m_amin\u001b[39m(a, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, out\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, keepdims\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[0;32m     44\u001b[0m           initial\u001b[38;5;241m=\u001b[39m_NoValue, where\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[1;32m---> 45\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mumr_minimum\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkeepdims\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minitial\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwhere\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mValueError\u001b[0m: zero-size array to reduction operation minimum which has no identity"
      ]
     }
    ],
