--- a/notebooks/ÆgtestatLucca.ipynb
+++ b/notebooks/ÆgtestatLucca.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "b9cce6e4",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Find alle CSV-filer i mappen\n",
-    "curve_paths = glob.glob(\"data/PC roteret/*.csv\")\n",
+    "curve_paths = glob.glob(\"../data/PC roteret/*.csv\")\n",
     "\n",
     "# Indlæs alle kurver\n",
     "aligned_curves = [np.loadtxt(path, delimiter=\",\") for path in curve_paths]\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "2bc0eb91",
    "metadata": {},
    "outputs": [
@@ -53,20 +53,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Pipe 01 – Curve 4         → Length: 249.57 mm\n",
+      "Pipe 01 – Curve 5         → Length: 253.51 mm\n",
+      "Pipe 02 – Curve 3         → Length: 226.69 mm\n",
+      "Pipe 02 – Curve 4         → Length: 296.75 mm\n",
+      "Pipe 03 – Curve 1         → Length: 211.98 mm\n",
+      "Pipe 03 – Curve 4         → Length: 175.71 mm\n",
+      "Pipe 04 – Curve 1         → Length: 583.02 mm\n",
+      "Pipe 04 – Curve 2         → Length: 385.41 mm\n",
+      "Pipe 05 – Curve 3         → Length: 222.99 mm\n",
+      "Pipe 05 – Curve 4         → Length: 212.66 mm\n",
+      "Pipe 05 – Curve 5         → Length: 253.18 mm\n",
+      "Pipe 06 – Curve 2         → Length: 261.29 mm\n",
+      "Pipe 06 – Curve 4         → Length: 261.16 mm\n",
+      "Pipe 06 – Curve 5         → Length: 232.53 mm\n",
+      "Pipe 07 – Curve 1         → Length: 246.99 mm\n",
+      "Pipe 07 – Curve 2         → Length: 259.30 mm\n",
+      "Pipe 07 – Curve 3         → Length: 282.04 mm\n",
+      "Pipe 07 – Curve 4         → Length: 231.21 mm\n",
+      "Pipe 08 – Curve 1         → Length: 215.46 mm\n",
+      "Pipe 08 – Curve 3         → Length: 279.47 mm\n",
+      "Pipe 08 – Curve 4         → Length: 282.62 mm\n",
+      "Pipe 08 – Curve 5         → Length: 244.41 mm\n",
+      "Pipe 09 – Curve 2         → Length: 285.66 mm\n",
+      "Pipe 09 – Curve 4         → Length: 238.30 mm\n",
+      "Pipe 10 – Curve 1         → Length: 210.34 mm\n",
+      "Pipe 10 – Curve 2         → Length: 265.04 mm\n",
+      "Pipe 10 – Curve 3         → Length: 312.07 mm\n",
+      "Pipe 10 – Curve 4         → Length: 229.11 mm\n",
       "\n",
-      "📏 Statistik over kurve-længder:\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "zero-size array to reduction operation minimum which has no identity",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m lengths \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(lengths)\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m📏 Statistik over kurve-længder:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMin:         \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mlengths\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmin\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMaks:        \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlengths\u001b[38;5;241m.\u001b[39mmax()\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGennemsnit:  \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlengths\u001b[38;5;241m.\u001b[39mmean()\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\lucca\\anaconda3\\envs\\fagprojekt\\Lib\\site-packages\\numpy\\core\\_methods.py:45\u001b[0m, in \u001b[0;36m_amin\u001b[1;34m(a, axis, out, keepdims, initial, where)\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m_amin\u001b[39m(a, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, out\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, keepdims\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[0;32m     44\u001b[0m           initial\u001b[38;5;241m=\u001b[39m_NoValue, where\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[1;32m---> 45\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mumr_minimum\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkeepdims\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minitial\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwhere\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mValueError\u001b[0m: zero-size array to reduction operation minimum which has no identity"
+      "📏 Statistik over kurve-længder:\n",
+      "Min:         175.71\n",
+      "Maks:        583.02\n",
+      "Gennemsnit:  264.59\n",
+      "Std. afvig:  72.66\n"
      ]
     }
    ],
@@ -93,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "221b5099",
    "metadata": {},
    "outputs": [],
@@ -117,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "b71d82e2",
    "metadata": {},
    "outputs": [],
@@ -143,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "1acc4ec7",
    "metadata": {},
    "outputs": [
@@ -151,7 +171,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lucca\\AppData\\Local\\Temp\\ipykernel_17712\\4041128400.py:8: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
+      "C:\\Users\\lucca\\AppData\\Local\\Temp\\ipykernel_884\\4041128400.py:8: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
       "  cmap = cm.get_cmap('plasma', 40)  # alternativt 'tab10', 'Set1', 'turbo'  # eller 'nipy_spectral', 'viridis' osv.\n"
      ]
     }
@@ -195,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "ddd28f31",
    "metadata": {},
    "outputs": [
@@ -203,7 +223,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lucca\\AppData\\Local\\Temp\\ipykernel_17712\\1086703927.py:34: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
+      "C:\\Users\\lucca\\AppData\\Local\\Temp\\ipykernel_884\\1086703927.py:34: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
       "  cmap = cm.get_cmap('plasma', 40)\n"
      ]
     }
@@ -262,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "25e871de",
    "metadata": {},
    "outputs": [
@@ -318,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "099b11c6",
    "metadata": {},
    "outputs": [],
@@ -354,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "14bb1308",
    "metadata": {},
    "outputs": [
@@ -417,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "e4ac6062",
    "metadata": {},
    "outputs": [
@@ -480,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "32672bd3",
    "metadata": {},
    "outputs": [
@@ -541,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "e80b7e64",
    "metadata": {},
    "outputs": [],
@@ -583,18 +603,242 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fb8d53c2",
+   "metadata": {},
+   "source": [
+    "### Suplots"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "6d684a02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lucca\\AppData\\Local\\Temp\\ipykernel_884\\4047832885.py:41: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
+      "  cmap = cm.get_cmap('plasma', 40)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.interpolate import interp1d\n",
+    "\n",
+    "def reparameterize_by_arclength(curve, num_points=1000):\n",
+    "    # 1. Beregn kumulativ længde\n",
+    "    deltas = np.diff(curve, axis=0)\n",
+    "    segment_lengths = np.linalg.norm(deltas, axis=1)\n",
+    "    cumulative_length = np.insert(np.cumsum(segment_lengths), 0, 0)\n",
+    "    total_length = cumulative_length[-1]\n",
+    "    s = cumulative_length / total_length  # normaliseret arc length i [0,1]\n",
+    "\n",
+    "    # 2. Interpolér X, Y, Z som funktion af s\n",
+    "    x_interp = interp1d(s, curve[:, 0], kind='linear')\n",
+    "    y_interp = interp1d(s, curve[:, 1], kind='linear')\n",
+    "    z_interp = interp1d(s, curve[:, 2], kind='linear')\n",
+    "\n",
+    "    s_uniform = np.linspace(0, 1, num_points)\n",
+    "    reparam_curve = np.stack([\n",
+    "        x_interp(s_uniform),\n",
+    "        y_interp(s_uniform),\n",
+    "        z_interp(s_uniform)\n",
+    "    ], axis=1)\n",
+    "\n",
+    "    return reparam_curve\n",
+    "# Reparameteriser alle kurver efter arc length\n",
+    "reparam_curves = [reparameterize_by_arclength(c, num_points=1000) for c in aligned_curves]\n",
+    "\n",
+    "# Brug X fra den første kurve som reference\n",
+    "ref_x = reparam_curves[0][:, 0]\n",
+    "\n",
+    "# Udtræk Y og Z fra alle kurver og tag gennemsnit\n",
+    "Y_all = np.stack([c[:, 1] for c in reparam_curves])\n",
+    "Z_all = np.stack([c[:, 2] for c in reparam_curves])\n",
+    "\n",
+    "mean_y = np.mean(Y_all, axis=0)\n",
+    "mean_z = np.mean(Z_all, axis=0)\n",
+    "\n",
+    "# Saml mean-kurven\n",
+    "mean_curve = np.stack([ref_x, mean_y, mean_z], axis=1)\n",
+    "\n",
+    "fig = plt.figure(figsize=(cols * 3, rows * 3))\n",
+    "cmap = cm.get_cmap('plasma', 40)\n",
+    "for i, curve in enumerate(reparam_curves):\n",
+    "    ax = fig.add_subplot(rows, cols, i + 1, projection='3d')\n",
+    "    ax.plot(*curve.T, color = cmap(i), linewidth=1.0, alpha=0.7)\n",
+    "    ax.plot(*mean_curve.T, color='black', linewidth=2.0)\n",
+    "    \n",
+    "    ax.set_title(labels[i], fontsize=8)\n",
+    "    ax.tick_params(labelsize=6)\n",
+    "    ax.set_xlabel(\"X\", fontsize=6)\n",
+    "    ax.set_ylabel(\"Y\", fontsize=6)\n",
+    "    ax.set_zlabel(\"Z\", fontsize=6)\n",
+    "    ax.view_init(elev=0, azim=270)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.suptitle(\"Kurver reparameteriseret efter arc length – med gennemsnit\", fontsize=14, y=1.02)\n",
+    "plt.subplots_adjust(top=0.92)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29b693aa",
+   "metadata": {},
+   "source": [
+    "### Alle i et"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "509cdd50",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Centrér hver kurve: træk dens egen centroid fra\n",
-    "centered_curves = [curve - np.mean(curve, axis=0) for curve in aligned_curves]\n",
+    "# Brug dine egne kurver i stedet for dummy data\n",
     "\n",
-    "# Stack og beregn gennemsnitsform\n",
-    "curve_stack = np.stack(centered_curves)  # (N, 1000, 3)\n",
-    "mean_curve = np.mean(curve_stack, axis=0)\n"
+    "# Plot alle rigtige kurver + mean\n",
+    "fig = plt.figure(figsize=(10, 6))\n",
+    "ax = fig.add_subplot(111, projection='3d')\n",
+    "\n",
+    "for c in reparam_curves:\n",
+    "    ax.plot(c[:, 0], c[:, 1], c[:, 2], color='gray', alpha=0.3)\n",
+    "\n",
+    "ax.plot(mean_curve[:, 0], mean_curve[:, 1], mean_curve[:, 2], color='black', linewidth=2, label='Mean Curve')\n",
+    "ax.set_xlabel(\"X\")\n",
+    "ax.set_ylabel(\"Y\")\n",
+    "ax.set_zlabel(\"Z\")\n",
+    "ax.set_title(\"Dine egne kurver (gennemsigtige) + Mean Curve (sort)\")\n",
+    "ax.legend()\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a21b631c",
+   "metadata": {},
+   "source": [
+    "### Stat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "d12494a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Brug mean/std for X, Y og Z\n",
+    "X_all = np.stack([c[:, 0] for c in reparam_curves])\n",
+    "mean_x = np.mean(X_all, axis=0)\n",
+    "std_x = np.std(X_all, axis=0)\n",
+    "\n",
+    "arc = np.linspace(0, 1, mean_x.shape[0])\n",
+    "\n",
+    "# Plot X, Y, Z mean ± std\n",
+    "fig, axs = plt.subplots(3, 1, figsize=(10, 9), sharex=True)\n",
+    "\n",
+    "# X\n",
+    "axs[0].plot(arc, mean_x, color='black', label='Mean X')\n",
+    "axs[0].fill_between(arc, mean_x - std_x, mean_x + std_x, color='gray', alpha=0.3, label='±1 Std')\n",
+    "axs[0].set_ylabel(\"X\")\n",
+    "axs[0].set_title(\"Mean ± Std Deviation\")\n",
+    "axs[0].grid(True)\n",
+    "axs[0].legend()\n",
+    "\n",
+    "# Y\n",
+    "axs[1].plot(arc, mean_y, color='black', label='Mean Y')\n",
+    "axs[1].fill_between(arc, mean_y - std_y, mean_y + std_y, color='gray', alpha=0.3, label='±1 Std')\n",
+    "axs[1].set_ylabel(\"Y\")\n",
+    "axs[1].grid(True)\n",
+    "axs[1].legend()\n",
+    "\n",
+    "# Z\n",
+    "axs[2].plot(arc, mean_z, color='black', label='Mean Z')\n",
+    "axs[2].fill_between(arc, mean_z - std_z, mean_z + std_z, color='gray', alpha=0.3, label='±1 Std')\n",
+    "axs[2].set_ylabel(\"Z\")\n",
+    "axs[2].set_xlabel(\"Arc Length Position\")\n",
+    "axs[2].grid(True)\n",
+    "axs[2].legend()\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "ab8af568",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pipe 01 – Curve 4         → RMS-fejl til mean: 6.4619\n",
+      "Pipe 01 – Curve 5         → RMS-fejl til mean: 4.7928\n",
+      "Pipe 02 – Curve 3         → RMS-fejl til mean: 4.1645\n",
+      "Pipe 02 – Curve 4         → RMS-fejl til mean: 8.4532\n",
+      "Pipe 03 – Curve 1         → RMS-fejl til mean: 5.5658\n",
+      "Pipe 03 – Curve 4         → RMS-fejl til mean: 5.0908\n",
+      "Pipe 04 – Curve 1         → RMS-fejl til mean: 16.5114\n",
+      "Pipe 04 – Curve 2         → RMS-fejl til mean: 9.3458\n",
+      "Pipe 05 – Curve 3         → RMS-fejl til mean: 4.0347\n",
+      "Pipe 05 – Curve 4         → RMS-fejl til mean: 3.1781\n",
+      "Pipe 05 – Curve 5         → RMS-fejl til mean: 5.2306\n",
+      "Pipe 06 – Curve 2         → RMS-fejl til mean: 8.4459\n",
+      "Pipe 06 – Curve 4         → RMS-fejl til mean: 10.6171\n",
+      "Pipe 06 – Curve 5         → RMS-fejl til mean: 3.5104\n",
+      "Pipe 07 – Curve 1         → RMS-fejl til mean: 6.6185\n",
+      "Pipe 07 – Curve 2         → RMS-fejl til mean: 3.5317\n",
+      "Pipe 07 – Curve 3         → RMS-fejl til mean: 3.9610\n",
+      "Pipe 07 – Curve 4         → RMS-fejl til mean: 8.6758\n",
+      "Pipe 08 – Curve 1         → RMS-fejl til mean: 2.4385\n",
+      "Pipe 08 – Curve 3         → RMS-fejl til mean: 12.3365\n",
+      "Pipe 08 – Curve 4         → RMS-fejl til mean: 2.4765\n",
+      "Pipe 08 – Curve 5         → RMS-fejl til mean: 5.5259\n",
+      "Pipe 09 – Curve 2         → RMS-fejl til mean: 5.1894\n",
+      "Pipe 09 – Curve 4         → RMS-fejl til mean: 6.6642\n",
+      "Pipe 10 – Curve 1         → RMS-fejl til mean: 5.2291\n",
+      "Pipe 10 – Curve 2         → RMS-fejl til mean: 3.2374\n",
+      "Pipe 10 – Curve 3         → RMS-fejl til mean: 4.5829\n",
+      "Pipe 10 – Curve 4         → RMS-fejl til mean: 7.3690\n"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "arc = np.linspace(0, 1, mean_z.shape[0])  # eller len(mean_z) hvis du er i tvivl\n",
+    "\n",
+    "plt.figure(figsize=(10, 4))\n",
+    "plt.plot(arc, mean_z, color='black', label=\"Mean Z\")\n",
+    "plt.fill_between(arc, mean_z - std_z, mean_z + std_z, color='gray', alpha=0.4, label=\"±1 Std Z\")\n",
+    "plt.title(\"Mean Z with ±1 Std Deviation Band\")\n",
+    "plt.xlabel(\"Arc Length Position\")\n",
+    "plt.ylabel(\"Z\")\n",
+    "plt.grid(True)\n",
+    "plt.legend()\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "rms_errors = []\n",
+    "for c in reparam_curves:\n",
+    "    dy = c[:, 1] - mean_y\n",
+    "    dz = c[:, 2] - mean_z\n",
+    "    rms = np.sqrt(np.mean(dy**2 + dz**2))\n",
+    "    rms_errors.append(rms)\n",
+    "\n",
+    "# Print eller brug som du vil\n",
+    "for i, rms in enumerate(rms_errors):\n",
+    "    print(f\"{labels[i]:<25} → RMS-fejl til mean: {rms:.4f}\")\n"
    ]
   },
   {
