--- a/notebooks/CurveAlignmentLucca.ipynb
+++ b/notebooks/CurveAlignmentLucca.ipynb
@@ -25,7 +25,7 @@
     "import matplotlib.cm as cm\n",
     "\n",
     "# load kurver\n",
-    "paths = glob.glob(\"3d kurver/*.csv\")\n",
+    "paths = glob.glob(\"../data/3d kurver/*.csv\")\n",
     "kurver = [np.loadtxt(path, delimiter=\",\") for path in paths]\n"
    ]
   },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "f0b32926",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lucca\\AppData\\Local\\Temp\\ipykernel_12432\\1407090388.py:7: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
+      "C:\\Users\\lucca\\AppData\\Local\\Temp\\ipykernel_16684\\3133343131.py:7: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
       "  colors = cm.get_cmap('tab20', n)\n"
      ]
     }
@@ -76,9 +76,9 @@
     "ax = fig.add_subplot(111, projection='3d')\n",
     "\n",
     "for i, curve in enumerate(kurver):\n",
-    "    ax.plot(*curve.T, color=colors(i), label=f\"Kurve {i+1}\", linewidth=1.5)\n",
+    "    ax.plot(*curve.T, color=colors(i), label=f\"Curve {i+1}\", linewidth=1.5)\n",
     "\n",
-    "ax.set_title(\"Kurver før ICP-alignment\", fontsize=14)\n",
+    "ax.set_title(\"Curves before ICP alignment\", fontsize=14)\n",
     "ax.set_xlabel(\"X\")\n",
     "ax.set_ylabel(\"Y\")\n",
     "ax.set_zlabel(\"Z\")\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b0f4262a",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fe843771",
    "metadata": {},
    "outputs": [],
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "7df0e408",
    "metadata": {},
    "outputs": [],
@@ -246,11 +246,11 @@
     "for i, curve in enumerate(aligned_curves):\n",
     "    ax.plot(*curve.T, linewidth=1.2, label=f'Kurve {i+1}')\n",
     "\n",
-    "ax.set_title(\"Alle kurver: PCA → Flip → ICP\", fontsize=14)\n",
+    "ax.set_title(\"After PCA → Flip → ICP\", fontsize=14)\n",
     "ax.set_xlabel(\"X\")\n",
     "ax.set_ylabel(\"Y\")\n",
     "ax.set_zlabel(\"Z\")\n",
-    "ax.view_init(elev=30, azim=100)\n",
+    "#ax.view_init(elev=30, azim=100)\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "id": "8c4ef5f5",
    "metadata": {},
    "outputs": [
@@ -319,9 +319,10 @@
     "ax.set_title(\"Aligned Curves + PCA axes (from pre-ICP reference)\", fontsize=14)\n",
     "ax.set_xlabel(\"X\")\n",
     "ax.set_ylabel(\"Y\")\n",
+    "ax.set_ylim([-50, 50])\n",
     "ax.set_zlabel(\"Z\")\n",
-    "ax.view_init(elev=30, azim=100)\n",
-    "ax.legend(loc='upper left', fontsize='small')\n",
+    "ax.view_init(elev=0, azim=180)\n",
+    "#ax.legend(loc='upper left', fontsize='small')\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
@@ -341,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "id": "d003e598",
    "metadata": {},
    "outputs": [],
@@ -396,9 +397,10 @@
     "ax.set_title(f\"Curves Rotated {angle_deg}° around PC1\", fontsize=14)\n",
     "ax.set_xlabel(\"X\")\n",
     "ax.set_ylabel(\"Y\")\n",
+    "ax.set_ylim([-50, 50])\n",
     "ax.set_zlabel(\"Z\")\n",
-    "ax.view_init(elev=30, azim=100)\n",
-    "ax.legend(loc='upper left', fontsize='small')\n",
+    "ax.view_init(elev=0, azim=180)\n",
+    "#ax.legend(loc='upper left', fontsize='small')\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
